fixed autoName position and invisible login text

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,9 @@ a {
 .opaqueBG {
     background-color: white;
 }
+button, input, optgroup, select, textarea {
+    color: #000;
+}
 /************************************************Header************************************************/
 .outerBorder, .footerDiv {
     width: 100%;
